# raylib-backends

./: .gitignore  CMakeLists.txt  DOCS.md  LICENSE  README.md
backends/rlmt/: rlgl.h  rlmt.h  rlmt.mm
backends/rlvk/: glad_vulkan_impl.c  rlgl.h  rlvk.h  rlvk_reflect.c
backends/rlwg/: rlgl.h  rlwg.h  rlwg_default_wgsl.h  rlwg_impl.h  rlwg_impl2.h
cmake/: RaylibBackend.cmake
examples/: CMakeLists.txt  clear_cube.c  clear_cube_metal.c  cube_scene.c  cube_scene.h  shell.html
examples/android/: README.md  build.gradle  clear_cube_android.c  settings.gradle
examples/android/app/: build.gradle
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/cpp/: CMakeLists.txt  main.c
examples/android/app/src/main/java/com/raylib/backends/example/: MainActivity.java
examples/ios/: CMakeLists.txt  Info.plist  README.md  main.mm
patches/: README.md
scripts/: generate_ios_metal_overlay.sh
